# crawlab-mcp

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  client.py  docker-compose.example.yml  pyproject.toml  requirements.txt  server.py  supervisord.conf  utils.py
.cursor/rules/: architecture.mdc
crawlab/mcp/: __init__.py  cli.py
crawlab/mcp/clients/: client.py
crawlab/mcp/llm_providers/: EXTENDING.md  README.md  __init__.py  anthropic.py  azure_openai.py  base.py  factory.py  openai_compatible.py
crawlab/mcp/servers/: server.py
crawlab/mcp/utils/: constants.py  http.py  tools.py
crawlab_mcp/: cli.py
crawlab_mcp/clients/: client.py  console_client.py
crawlab_mcp/llm_providers/: EXTENDING.md  README.md  azure_openai.py
crawlab_mcp/servers/: server.py
tests/clients/: test_client.py
tests/servers/: README.md
